--- a/public/style.css
+++ b/public/style.css
@@ -32,7 +32,7 @@ h1, h2, h3, p {
 
 h1 {
     font-size: 3rem;
-    padding-bottom: 0.5rem;
+    padding-bottom: 1rem;
 }
 
 h2 {
@@ -59,8 +59,8 @@ ul li a.inactive {
 
 #main-container {
     height: 100vh;
-    /* max-width: 1300px; */
-    /* margin:0 auto; */
+    max-width: 1000px;
+    margin:auto;
     padding: 0;
     display: flex;
     flex-direction: column;
@@ -182,6 +182,7 @@ ul li a.inactive {
 .list-wrapper-element {
     width: 100%;
     height: 100%;
+    min-height: 100vh;
     flex: 0 0 auto;
     margin: 0;
     padding: 0;
@@ -195,6 +196,14 @@ ul li a.inactive {
 .list-wrapper-element ul li {
     padding: 0;
     padding-bottom: 0.5rem;
+}
+
+.list-wrapper-element a {
+    color: var(--text-color);
+}
+
+.list-wrapper-element a:hover {
+    color: var(--highlight-color);
 }
 
 
