--- a/public/style.css
+++ b/public/style.css
@@ -19,7 +19,7 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: center;
     font-family: 'Jost', sans-serif;
     /* font-family: 'Roboto Mono', monospace; */
@@ -38,12 +38,12 @@ h1, h2, h3, p, ul{
 h1 {
     font-size: 4rem;
     padding-bottom: 1rem;
-    padding-top: 2rem;
+    padding-top: 1rem;
 }
 
 h2 {
     font-size: 2rem;
-    padding-top: 2.75rem;
+    padding-top: 1rem;
 }
 
 h3 {
@@ -88,15 +88,17 @@ ul li a.inactive {
     padding: 0;
     margin: 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    /*put background image or animation here*/
 }
 
 .nav {
     display: flex;
-    height: 100%;
-    width: fit-content;
+    height: fit-content;
+    width: 100%;
     position: sticky;
     position: -webkit-sticky;
+    flex-direction: row;
 }
 
 .nav ul {
@@ -104,14 +106,15 @@ ul li a.inactive {
     padding: 0;
     display: flex;
     width: 100%;
-    flex-direction: column;
+    height: fit-content;
+    flex-direction: row;
     list-style-type: none;
-    padding-top: 3rem;
+    justify-content: center;
 }
 
 .nav ul li {
-    padding: 0;
-    padding-bottom: 1rem;
+    padding: 0.5rem;
+    height: fit-content;
 }
 
 .list-wrapper {
@@ -120,7 +123,6 @@ ul li a.inactive {
     min-height: fit-content;
     padding: 0;
     margin: 0;
-    padding-left: 1.2rem;
     display: flex;
     flex-direction: column;
     scroll-behavior: smooth;
